--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,14 @@
-.ventana1 {
+* {
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+.barranav {
+  font: "Poppins", sans-serif;
   color: white;
+  background-color: black;
 }
