--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,3 +1,18 @@
-.ventana1{
+//fuentes poppins
+$Poppins: 'Poppins', sans-serif;
+$Roboto: 'Roboto', sans-serif;
+
+*{
+    padding: 0;
+    margin: 0;
+}
+
+a{
+    text-decoration: none;
+}
+
+.barranav{
+    font: $Poppins;
     color: rgb(255, 255, 255); 
+    background-color: black;
 }
