--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -16,3 +16,7 @@ a{
     color: rgb(255, 255, 255); 
     background-color: black;
 }
+
+.seccion1{
+    background-image: url(../img/index/IMG_0099gris.jpg);
+}
