--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,5 +14,6 @@ a {
 }
 
 .seccion1 {
-  background-image: url(../img/index/IMG_0099gris.jpg);
+  width: 100vW;
+  background-image: url(../img/index/IMG_0009.jpg);
 }
