--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -18,5 +18,6 @@ a{
 }
 
 .seccion1{
-    background-image: url(../img/index/IMG_0099gris.jpg);
+    width: 100vW;
+    background-image: url(../img/index/IMG_0009.jpg);
 }
