--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -19,5 +19,5 @@ a{
 
 .seccion1{
     width: 100vW;
-    background-image: url(../img/index/IMG_0009.jpg);
+    background-image: url(../img/ico/color_Mesa de trabajo 1.png);
 }
