--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,5 @@ a {
 }
 
 .seccion1 {
-  width: 100vW;
-  background-image: url(../img/index/IMG_0009.jpg);
+  background-image: url(../img/ico/color_MesadeTrabajo1.png);
 }
