--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -18,6 +18,5 @@ a{
 }
 
 .seccion1{
-    width: 100vW;
-    background-image: url(../img/ico/color_Mesa de trabajo 1.png);
+    background-image: url(../img/ico/color_MesadeTrabajo1.png);
 }
