--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -7,6 +7,10 @@ $Roboto: 'Roboto', sans-serif;
     margin: 0;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 a{
     text-decoration: none;
 }
@@ -42,3 +46,22 @@ a{
 .seccion2{
     font-family: $Roboto;
 }
+
+
+/*-------------------------------------------------------------- 
+
+# Estilos Scroll 
+
+--------------------------------------------------------------*/ 
+
+//body::-webkit-scrollbar { 
+   // width: 10px; 
+   // background: purple; 
+ // } 
+
+ // body::-webkit-scrollbar-thumb { 
+    /*background: white, 0.2;*/ 
+  //  border-radius: 10px; 
+  //  border-right: 10px solid $color3; 
+  //} 
+  
