--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -60,6 +60,10 @@ a{
     font-family: $Roboto;
 }
 
+.footer{
+    background-color: rgb(0,0,0);
+}
+
 
 /*-------------------------------------------------------------- 
 
