--- a/css/estilos.css
+++ b/css/estilos.css
@@ -55,6 +55,10 @@ a {
   font-family: "Roboto", sans-serif;
 }
 
+.footer {
+  background-color: #161616;
+}
+
 /*-------------------------------------------------------------- 
 
 # Estilos Scroll 
