--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -62,6 +62,12 @@ a{
 
 .footer{
     background-color: #161616;
+    font-family: $Poppins;
+}
+
+.footer1{
+    background-color: #000000;
+    font-family: $Poppins;
 }
 
 
