--- a/css/estilos.css
+++ b/css/estilos.css
@@ -59,10 +59,20 @@ a {
   background-color: #161616;
   font-family: "Poppins", sans-serif;
 }
+.footer a {
+  text-decoration: none;
+  color: white;
+  font-weight: 300;
+}
 
 .footer1 {
   background-color: #000000;
   font-family: "Poppins", sans-serif;
+  color: white;
+}
+.footer1 a {
+  text-decoration: none;
+  color: white;
 }
 
 /*-------------------------------------------------------------- 
