--- a/css/estilos.css
+++ b/css/estilos.css
@@ -80,4 +80,12 @@ a {
 # Estilos Scroll 
 
 --------------------------------------------------------------*/
-/*background: white, 0.2;*/
+body::-webkit-scrollbar {
+  width: 10px;
+  background: #424242;
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  border-right: 10px solid #ffffff;
+}
