--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -40,7 +40,7 @@ a{
 
 .seccion1{
     width: 100vw;
-    height: 100vh;
+    //height: 100vh;
     background-image: url(../img/index/Index1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
