--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -28,6 +28,20 @@ a{
     }
 }
 
+.boton2{
+    background-color: #161616;
+    padding: 2% 4%;
+    font-family: $Poppins;
+    color: rgb(255, 255, 255);
+    border-radius: 20px;
+
+    &:hover{
+        background-color: #000000;
+        color: rgb(255, 255, 255);
+    }
+}
+
+
 .barranav{
     font: $Poppins;
     color: rgb(255, 255, 255); 
