--- a/css/estilos.css
+++ b/css/estilos.css
@@ -46,15 +46,11 @@ a {
 }
 
 .seccion1 {
-  width: 100vw;
-  height: 100vh;
-  background-image: url(../img/index/Index1.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: white;
-  font-family: "Poppins", sans-serif;
-  font-size: 15rem;
-  font-weight: 700;
+  margin-left: 0%;
+  margin-right: 0%;
+  padding-left: 0%;
+  padding-right: 0%;
+  overflow-x: hidden;
 }
 
 .center {
