--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -9,6 +9,7 @@ $Roboto: 'Roboto', sans-serif;
 
 body{
     overflow-x: hidden;
+    
 }
 
 a{
@@ -58,6 +59,8 @@ a{
     padding-left: 0%;
     padding-right: 0%;
     overflow-x: hidden;
+    padding: 0;
+    margin: 0;
     
 }
 
