--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,7 +38,7 @@ a {
 .barranav {
   font: "Poppins", sans-serif;
   color: white;
-  background-color: black;
+  background-color: #161616;
 }
 
 .textohednav {
