--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -46,7 +46,7 @@ a{
 .barranav{
     font: $Poppins;
     color: rgb(255, 255, 255); 
-    background-color: black;
+    background-color: #161616;
 }
 
 .textohednav{
