--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -16,6 +16,12 @@ a{
     text-decoration: none;
 }
 
+h6{
+    font-family: $Roboto;
+    font-weight: 400;
+
+}
+
 .boton{
     background-color: #161616;
     padding: 3% 8%;
