--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -29,26 +29,39 @@ a{
 
 .boton{
     background-color: #161616;
-    padding: 3% 5%;
+    padding: 4% 5%;
     font-family: $Poppins;
     color: rgb(255, 255, 255);
     border-radius: 20px;
 
     &:hover{
-        background-color: #000000;
+        background-color: #393838;
         color: rgb(255, 255, 255);
     }
 }
 
 .boton2{
     background-color: #161616;
-    padding: 1% 4%;
+    padding: 2% 4%;
     font-family: $Poppins;
     color: rgb(255, 255, 255);
     border-radius: 20px;
 
     &:hover{
-        background-color: #000000;
+        background-color: #393838;
+        color: rgb(255, 255, 255);
+    }
+}
+
+.boton3{
+    background-color: #161616;
+    padding: 2% 2%;
+    font-family: $Poppins;
+    color: rgb(255, 255, 255);
+    border-radius: 20px;
+
+    &:hover{
+        background-color: #393838;
         color: rgb(255, 255, 255);
     }
 }
